# pspec_likelihood

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  GaussianLinearSystematics.py  README.md  README.rst  generate_uvp.ipynb  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: auto-merge-deps.yml  publish-to-pypi.yaml  release-draft.yml  run-docs-code.yaml  test-with-warnings.yaml  test_and_deploy.yaml  test_suite.yaml  tests.yaml
ci/: tests.yaml
docs/: api.rst  conf.py  environment.yaml  index.rst  tutorials.rst
docs/tutorials/: fit_micro21cm_emcee.ipynb  getting_started.ipynb
dvlpt/: sph_xtk_idr3_fieldC_band1.hdf5  test_validation_idr3.ipynb  tests_data_file.ipynb
pspeclikelihood/: pspeclikelihood.py
pspeclikelihood/data/: pspec_sim.h5
pspecmodel/: pspecmodel.py
src/pspec_likelihood/: __init__.py  arbitrary_linear_systematics.py  likelihood.py  types.py  utils.py
src/pspec_likelihood/data/: __init__.py  uvp_test_cov_windows.h5
src/pspeclikelihood/: pspeclikelihood.py
tests/: conftest.py  power_spectrum_integration.ipynb  test_basic.py  test_dmi.py  test_likelihood.py  test_likelihoods.py  test_types.py  test_uvpread.py
tests/data/: README  data_calibrated_testfile.h5  pspec_h1c_idr2_field1.h5
